@@ -25,7 +25,9 @@ readLines(con = stdin(), n = -1, ok = TRUE, warn = TRUE,
     used to mark character strings as known to be in
     Latin-1 or UTF-8: it is not used to re-encode the input.  To do the
     latter, specify the encoding as part of the connection \code{con} or
-    via \code{\link{options}(encoding=)}.}
+    via \code{\link{options}(encoding=)}: see the example under
+    \code{\link{file}}.
+  }
 }
 \details{
   If the \code{con} is a character string, the function calls
